--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <style name="MySeekBar" parent="Widget.AppCompat.SeekBar">
+        <item name="android:progressBackgroundTint">@color/txt_white35</item>
+        <item name="android:progressTint">@color/offwhite</item>
+        <item name="android:thumbTint">@android:color/white</item>
+    </style>
+
+    <style name="MySeekBarMin" parent="Widget.AppCompat.SeekBar">
+        <item name="android:progressBackgroundTint">@color/txt_white35</item>
+        <item name="android:progressTint">@color/colorAccent</item>
+        <item name="android:thumbTint">@color/colorAccent</item>
+        <item name="android:minHeight">@dimen/_1sdp</item>
+        <item name="android:maxHeight">@dimen/_1sdp</item>
+    </style>
+
     <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
         <item name="textAllCaps">false</item>
         <item name="android:textSize">@dimen/_10sdp</item>
